# airport_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
account/: serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
airport/: apps.py  models.py  urls.py  validators.py
airport/api/: serializers.py  urls.py  views.py
airport/api/serializers/: base.py  detail.py  list.py  post.py
airport/migrations/: 0001_initial.py  0002_alter_airplane_rows_alter_airplane_seats_in_row_and_more.py  0003_remove_ticket_unique_ticket_ticket_unique_ticket.py  0004_alter_order_created_at_alter_ticket_row_and_more.py  0005_remove_ticket_unique_ticket_ticket_unique_ticket.py  0006_alter_order_options.py
airport_service/: asgi.py  urls.py
airport_service/settings/: base.py  dev.py
app/: asgi.py  urls.py
app/settings/: base.py  dev.py  prod.py
docs/: airplanes_realistic_fixture.json  airport_fixture.json  dump.json
theatre/: models.py
theatre/migrations/: 0001_initial.py
theatre_service/: asgi.py  settings.py  urls.py  wsgi.py
theatre_service/settings/: base.py  dev.py  prod.py
