[project]
name = "airport-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.0",
    "djangorestframework-stubs[compatible-mypy]>=3.16.0",
]

[tool.black]
line-length = 79